k8s/fastapi-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: movie-recommender-service

spec:
  selector:
    app: movie-recommender

  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000

  type: NodePort
