k8s/movie-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: movie-ingress

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: movie-recommender-service
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: movie-recommender-service
            port:
              number: 80
